--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "handlebars": "^4.5.3"
+    "handlebars": "^4.7.7"
   },
   "homepage": "https://github.com/TimDaub/jsonresume-theme-paper",
   "main": "index.js",
   "scripts": {
-    "start": "resume serve"
+    "start": "resume serve --theme ."
   },
-  "devDependencies": {},
   "keywords": [
     "jsonresume",
     "json",
