--- a/resume.template
+++ b/resume.template
@@ -41,61 +41,14 @@
               </div>
             </div>
           </section>
-          <!-- CONTACT -->
-          <section class="content">
-            <div class="row">
-              <div class="content-cat">
-                Contact
-              </div>
-              <div class="content-text">
-                {{#if website}}
-                  <ul>
-                    <li>Website</li>
-                    <li>{{website}}</li>
-                  </ul>
-                {{/if}}
-                {{#if email}}
-                  <ul>
-                    <li>Email</li>
-                    <li><a href="mailto:{{email}}">{{email}}</a></li>
-                  </ul>
-                {{/if}}
-                {{#if phone}}
-                  <ul>
-                    <li>Phone</li>
-                    <li>{{phone}}</li>
-                  </ul>
-                {{/if}}
-              </div>
-            </div>
-          </section>
 
-
-          <!-- PROFILES -->
-          {{#if profiles.length}}
-            <section class="content profiles">
-              <div class="row">
-                <div class="content-cat">
-                  Profiles
-                </div>
-                <div class="content-text profiles-listing">
-                  {{#each profiles}}
-                    {{#if network}}
-                    <ul>
-                      <li>{{network}}</li>
-                      <li>
-                        <a href="{{url}}" target="_blank">
-                          {{url}}
-                        </a>
-                      </li>
-                    </ul>
-                    {{/if}}
-                  {{/each}}
-                </div>
-              </div>
-            </section>
-          {{/if}}
-
+          {{#if @root.resume.meta.mergeContactProfile}}
+            {{> contact-profile-merged}}
+          {{else}}
+            {{> contact-profile-separated}}
+          {{/if}} 
+         
+    
           {{#location}}
             {{#ifCond address '||' city}}
               <section class="content">
