Ignore linked cv and resume-gist

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-node_modules/
 resume-complete.json
 resume.html
-Tim Daubensch\303\274tz.pdf
-resume-backup-2019.json
+*.pdf
 npm-debug.log
 resume.json
-.DS_Store
+cv.json
+resume-gist.json
 public/
